--- a/src/app/register/register.module.css
+++ b/src/app/register/register.module.css
@@ -34,6 +34,7 @@ margin-top: 70px;
 }
 
 .label{
+
     margin:0px;
 font-weight: 549;
 }
@@ -60,7 +61,7 @@ font-weight: 549;
 .label2{
   
     font-size: 82%;
-   
+   position: absolute;
 }
 
 .button{
@@ -84,7 +85,8 @@ font-size: 14px;
 }
 
 .link{
-    font-size: 102%;
+
+    font-size: 120%;
     color: blue;
     animation: blinker 3s steps(2, start) infinite;
 }
