--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -14,6 +14,11 @@ width: 300px;
 margin-top: 100px;
 }
 
+
+
+
+
+
 .title{
     position: relative;
     font-family: Arial ;
@@ -31,6 +36,14 @@ border-radius: 5px;
 padding-left: 3px;
 }
 
+
+
+
+
+
+
+
+
 .button{
     position: relative;
     width: 90px;
@@ -45,6 +58,7 @@ padding-left: 3px;
 .lebel2{
 
     font-size: 90%;
+   
 }
 
 .link{
@@ -59,6 +73,9 @@ padding-left: 3px;
     text-align: left;
     left: 14%;
     font-size: 90%;
+    font-family: Arial ;
+
+
 }
 .errorBox{
     margin-top: 5px;
@@ -70,3 +87,8 @@ padding-left: 3px;
 .info{
     text-align: center;
 }
+
+
+
+
+
