--- a/src/app/Components/pot.module.css
+++ b/src/app/Components/pot.module.css
@@ -8,7 +8,7 @@
 {position: absolute;
     height: 90%;
     width: 90%;
-    background-color: rgb(19, 19, 197);
+    background-color: rgb(0, 0, 256);
     top:5%;
     left: 5%;
 box-sizing: border-box;
@@ -19,10 +19,16 @@ box-sizing: border-box;
     height: 70%;
     width: 70%;
     border-radius: 100%;
-    background-color: rgb(103, 24, 206);
+    background-color: rgb(6, 6, 240);
     top:15%;
     left: 15%;
 box-sizing: border-box;
+box-shadow:
+inset 5px 5px 5px rgba(145, 188, 245, 0.658),
+15px 15px 15px rgba(0, 0, 0, 0.4);
+
+
+
 }
 
 .arrow
