--- a/src/app/Components/SwitchControl/Compass/compass.module.css
+++ b/src/app/Components/SwitchControl/Compass/compass.module.css
@@ -8,35 +8,44 @@
     top :50%;
     left : 50%;
     transform: translate(-50%, -50%);
+ 
   }
 
 
 .CompassBody
 {
   position: absolute;
-  background-color: rgb(60, 207, 2);
+  background-color: rgb(235, 243, 232);
   height: 90%;
   width: 90%;
   border-radius: 50%;
   top: 5%;
   left: 5%;
+  box-shadow:
+ -1px -1px 10px  rgb(255, 255, 255),
+   2px 2px 7px  rgb(0, 0, 0);
+
 }
 
 .CompassBody1
 {
   position: absolute;
-  background-color: rgb(91, 2, 207);
+  background-color: rgb(231, 240, 132);
   height: 70%;
   width: 70%;
   border-radius: 50%;
   top: 15%;
   left: 15%;
+  box-shadow:
+  -1px -1px 10px  rgb(0, 0, 0),
+  2px 2px 4px 4px  rgb(255, 255, 255),
+  inset -2px -2px 10px 3px  rgb(213, 228, 7);
 }
 
 .CompassDot
 {
   position: absolute;
-  background-color: rgb(145, 125, 170);
+  background-color: rgb(14, 7, 22);
   height: 10%;
   width: 10%;
   border-radius: 50%;
@@ -100,7 +109,8 @@
   position: absolute;
   top: 50%; 
   right: 0%;
-  transform: translate(0% ,-50%);
+
+  transform: translate(-10% ,-50%);
 
 }
 
