--- a/src/app/Components/Thermomete/thermometer.module.css
+++ b/src/app/Components/Thermomete/thermometer.module.css
@@ -42,13 +42,13 @@ box-shadow: 2px -0px 1px 2px #ccc;
 }
 
 .ThermameterIBulb
-{
+{position: absolute;
   height: 30px;
   width: 30px;
   background-color: rgb(175, 9, 9);
   border-radius: 15px;
-  transform: translate(34px, -60px);
- 
+left: -50%;
+  transform: translate(10%, -30%);
 }
 
 .ThermamerRuler{
@@ -90,13 +90,26 @@ font-size: 10px;
 
 }
 
-.ThermameterInfo
+.ThermameterInfo1
 {
  position: absolute;
-  border: 1px solid rgb(97, 19, 199);
- top :20%;
- left: 40%;
+border: 1px solid rgb(97, 19, 199);
+ top :10%;
+ left: 45%;
  line-height: 130%;
 font-weight: 600;
 text-align: center;
+width: 50%;
+}
+
+.ThermameterInfo2
+{
+ position: absolute;
+  border: 1px solid rgb(97, 19, 199);
+ top :50%;
+ left: 45%;
+ line-height: 130%;
+font-weight: 600;
+text-align: center;
+width: 50%;
 }
